export default interface Element {
	top: number
	left: number
	width: number
	height: number
	color: string
}
